# ros_manipulator_hit_the_ball

./: README.md  ros_manipulator_hit_the_ball.rosinstall
ball_track_alvar/: CMakeLists.txt  package.xml
ball_track_alvar/cfg/: Params.cfg
ball_track_alvar/include/ball_track_alvar/: Camera.h  Marker.h
ball_track_alvar/include/ball_track_alvar/filter/: kinect_filtering.h  medianFilter.h
ball_track_alvar/launch/: pr2_indiv_no_depth.launch
ball_track_alvar/node/: IndividualMarkersNoDepth.cpp
ball_track_alvar/src/: Bitset.cpp  Camera.cpp  CaptureDevice.cpp  CaptureFactory.cpp  CaptureFactory_unix.cpp  ConnectedComponents.cpp  CvTestbed.cpp  DirectoryIterator.cpp  DirectoryIterator_unix.cpp  Draw.cpp  FileFormatUtils.cpp  Filter.cpp  Kalman.cpp  Line.cpp  Marker.cpp  MarkerDetector.cpp  MultiMarker.cpp  MultiMarkerBundle.cpp  MultiMarkerInitializer.cpp  Mutex.cpp  Mutex_unix.cpp  Optimization.cpp  Plugin.cpp  Plugin_unix.cpp  Pose.cpp  Rotation.cpp  Threads.cpp  Threads_unix.cpp  Util.cpp  kinect_filtering.cpp
ball_track_alvar_msgs/: CMakeLists.txt  package.xml
ball_track_alvar_msgs/msg/: AlvarBalls.msg
ros_manipulator_description/: CMakeLists.txt  package.xml
ros_manipulator_description/launch/: ball_pose.launch
ros_manipulator_description/urdf/: open_manipulator.urdf.xacro  open_manipulator_robot.urdf.xacro
ros_manipulator_hit_the_ball/: CMakeLists.txt  package.xml
ros_manipulator_hit_the_ball/include/ros_manipulator_hit_the_ball/: ros_manipulator_hit_the_ball.h
ros_manipulator_hit_the_ball/launch/: ros_manipulator_hit_the_ball.launch
ros_manipulator_hit_the_ball/src/: ros_manipulator_hit_the_ball.cpp
