<package>
<name>ball_track_alvar</name>
<version>0.7.1</version>
<description>
This package is a edition of ROS wrapper for Alvar, an open source AR tag tracking library, for tracking BALL without AR tag.
</description>
<author email="sniekum@cs.umass.edu">Scott Niekum</author>
<maintainer email="sniekum@cs.umass.edu">Scott Niekum</maintainer>
<maintainer email="130s@2000.jukuin.keio.ac.jp">Isaac I.Y. Saito</maintainer>
<maintainer email="rgh137@naver.comm">Kihwan Ryoo</maintainer>
<license>LGPL-2.1</license>
<url type="website">http://ros.org/wiki/ar_track_alvar</url>
<url type="repository">https://github.com/Kihwan-Ryoo/ros_manipulator_hit_the_ball</url>

 <buildtool_depend>catkin</buildtool_depend>

 <build_depend>ball_track_alvar_msgs</build_depend>
 <build_depend>cmake_modules</build_depend>
 <build_depend>cv_bridge</build_depend>
 <build_depend>geometry_msgs</build_depend>
 <build_depend>image_transport</build_depend>
 <build_depend>message_generation</build_depend>
 <build_depend>pcl_ros</build_depend>
 <build_depend>pcl_conversions</build_depend>
 <build_depend>resource_retriever</build_depend>
 <build_depend>rospy</build_depend>
 <build_depend>roscpp</build_depend>
 <build_depend>sensor_msgs</build_depend>
 <build_depend>std_msgs</build_depend>
 <build_depend>tf</build_depend>
 <build_depend>tf2</build_depend>
 <build_depend>tinyxml</build_depend>
 <build_depend>visualization_msgs</build_depend>
 <build_depend>dynamic_reconfigure</build_depend>

 <run_depend>ball_track_alvar_msgs</run_depend>
 <run_depend>cv_bridge</run_depend>
 <run_depend>geometry_msgs</run_depend>
 <run_depend>image_transport</run_depend>
 <run_depend>message_runtime</run_depend>
 <run_depend>pcl_ros</run_depend>
 <run_depend>pcl_conversions</run_depend>
 <run_depend>resource_retriever</run_depend>
 <run_depend>rospy</run_depend>
 <run_depend>roscpp</run_depend>
 <run_depend>sensor_msgs</run_depend>
 <run_depend>std_msgs</run_depend>
 <run_depend>tf</run_depend>
 <run_depend>tf2</run_depend>
 <run_depend>tinyxml</run_depend>
 <run_depend>visualization_msgs</run_depend>
 <run_depend>dynamic_reconfigure</run_depend>

</package>


